--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="https://wa.me/085886953733" target="__blank"><img src="images/whatsapp.png" alt=""></a>
     </div>
     <header>
-        <a href="index.html"><img src="images/tech.png" alt="Techy Savvy logo"></a>
+        <a href="index.html"><img src="tech.png" alt="Techy Savvy logo"></a>
         <h1>Techy Savvy</h1>
     </header>
     <main>
@@ -31,14 +31,14 @@
         <div id="content">
             <article class="about box">
                 <h3>Techy Savvy adalah platform pengembangan literasi digital dan teknologi informasi terbaik di Indonesia</h3>
-                <img src="images/tech.png" alt="">
+                <img src="tech.png" alt="">
             </article>
             <article class="program box">
                 <h1>3 Program untuk Pengembangan Skill yang Maksimal </h1>
                 <section class="program-item">
                     <div class="blog box">
                         <a href="blog.html">
-                            <img src="images/blog.png" alt="">
+                            <img src="blog.png" alt="">
                             <h2>Blog</h2>
                         </a>
                         <p>Ut nisi enim fugiat anim eu exercitation voluptate. Dolore dolore ad deserunt exercitation irure incididunt consectetur qui Lorem dolore consequat nostrud. Commodo in sint magna pariatur duis sint occaecat eiusmod sunt</p>
@@ -46,23 +46,20 @@
                     </div>
                     <div class="events box">
                         <a href="events.html">
-                            <img src="images/calendar.png" alt="">
+                            <img src="calendar.png" alt="">
                             <h2>Events</h2>
                         </a>
                         <p>Irure in esse exercitation elit mollit sint est. Nisi officia excepteur sunt ad officia mollit. Eu deserunt elit commodo nostrud. Sit nostrud laborum enim officia culpa ipsum enim aute non ex voluptate ullamco dolor. </p>
                     </div>
                     <div class="project box">
                         <a href="">
-                            <img src="images/touch-screen.png" alt="">
+                            <img src="touch-screen.png" alt="">
                             <h2>Project Platform</h2>
                         </a>
                         <p>Ipsum dolore anim consequat ullamco fugiat est reprehenderit dolore officia ut veniam. Non aliquip tempor labore dolore. Magna eiusmod anim consequat incididunt id ea.</p>
                     </div>
                 </section>
             </article>
-            <!-- <article class="top-program box">
-
-            </article> -->
 
         </div>
     </main>
