--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
         <a href="https://wa.me/085886953733" target="__blank"><img src="images/whatsapp.png" alt=""></a>
     </div>
     <header>
-        <a href="index.html"><img src="images/tech.png" alt="Techy Savvy logo"></a>
+        <a href="index.html"><img src="tech.png" alt="Techy Savvy logo"></a>
         <h1>Techy Savvy</h1>
     </header>
     <main>
@@ -35,15 +35,15 @@
             </article>
             <article class="article box">
                 <h3>Cupidatat aliqua sunt veniam labore amet do fugiat sit amet reprehenderit labore.</h3>
-                <img src="images/collaboration.jpg" alt="">
+                <img src="collaboration.jpg" alt="">
             </article>
             <article class="article box">
                 <h3>Excepteur laboris quis officia culpa esse consectetur ut pariatur.</h3>
-                <img src="images/collaboration.jpg" alt="">
+                <img src="collaboration.jpg" alt="">
             </article>
             <article class="article box">
                 <h3>Dolore exercitation ullamco consequat incididunt ex consequat exercitation.</h3>
-                <img src="images/collaboration.jpg" alt="">
+                <img src="collaboration.jpg" alt="">
             </article>
         </div>
     </main>
