--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Techy Savvy</title>
-    <link rel="icon" href="images/tech.png">
+    <link rel="icon" href="tech.png">
     <link rel="stylesheet" href="style-events.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans&display=swap" rel="stylesheet">
 
@@ -14,10 +14,10 @@
 <body>
     <div id="whatsapp">
         <p>Contact us</p>
-        <a href="https://wa.me/085886953733" target="__blank"><img src="images/whatsapp.png" alt=""></a>
+        <a href="https://wa.me/085886953733" target="__blank"><img src="whatsapp.png" alt=""></a>
     </div>
     <header>
-        <a href="index.html"><img src="images/tech.png" alt="Techy Savvy logo"></a>
+        <a href="index.html"><img src="tech.png" alt="Techy Savvy logo"></a>
         <h1>Techy Savvy</h1>
     </header>
     <main>
@@ -35,7 +35,7 @@
                 <section class="events-item">
                     <div class="item box">
                         <a href="blog.html">
-                            <img src="images/blog.png" alt="">
+                            <img src="blog.png" alt="">
                             <h2>How to be Web Designer</h2>
                         </a>
                         <p>Adipisicing ut voluptate eiusmod ad nostrud qui mollit quis non aliqua aliqua est voluptate esse.</p>
@@ -43,14 +43,14 @@
                     </div>
                     <div class="item box">
                         <a href="events.html">
-                            <img src="images/calendar.png" alt="">
+                            <img src="calendar.png" alt="">
                             <h2>How to be UI/UX Designer</h2>
                         </a>
                         <p>Tempor elit exercitation minim et nostrud sint sint ex ullamco dolore aute esse amet.</p>
                     </div>
                     <div class="item box">
                         <a href="">
-                            <img src="images/touch-screen.png" alt="">
+                            <img src="touch-screen.png" alt="">
                             <h2>How to be Scrum Master</h2>
                         </a>
                         <p>Aute ex reprehenderit fugiat incididunt elit exercitation ipsum mollit enim laboris proident minim.</p>
@@ -62,7 +62,7 @@
                 <section class="events-item">
                     <div class="item box">
                         <a href="blog.html">
-                            <img src="images/blog.png" alt="">
+                            <img src="blog.png" alt="">
                             <h2>AI Chatbot pada Aplikasi Online Shop</h2>
                         </a>
                         <p>Adipisicing ut voluptate eiusmod ad nostrud qui mollit quis non aliqua aliqua est voluptate esse.</p>
@@ -70,24 +70,21 @@
                     </div>
                     <div class="item box">
                         <a href="events.html">
-                            <img src="images/calendar.png" alt="">
+                            <img src="calendar.png" alt="">
                             <h2>Face Recognition untuk Manajemen SDM</h2>
                         </a>
                         <p>Tempor elit exercitation minim et nostrud sint sint ex ullamco dolore aute esse amet.</p>
                     </div>
                     <div class="item box">
                         <a href="">
-                            <img src="images/touch-screen.png" alt="">
+                            <img src="touch-screen.png" alt="">
                             <h2>How to do Complete UX Research</h2>
                         </a>
                         <p>Aute ex reprehenderit fugiat incididunt elit exercitation ipsum mollit enim laboris proident minim.</p>
                     </div>
                 </section>
             </article>
-            <!-- <article class="top-program box">
-
-            </article> -->
-
+            
         </div>
     </main>
     <footer>
