--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Techy Savvy</title>
-    <link rel="icon" href="images/tech.png">
+    <link rel="icon" href="tech.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nunito+Sans&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
 <body>
     <div id="whatsapp">
         <p>Contact us</p>
-        <a href="https://wa.me/085886953733" target="__blank"><img src="images/whatsapp.png" alt=""></a>
+        <a href="https://wa.me/085886953733" target="__blank"><img src="whatsapp.png" alt=""></a>
     </div>
     <header>
         <a href="index.html"><img src="tech.png" alt="Techy Savvy logo"></a>
