--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="whatsapp">
         <p>Contact us</p>
-        <a href="https://wa.me/085886953733" target="__blank"><img src="whatsapp.png" alt=""></a>
+        <a href="https://wa.me/085886953733" target="__blank"><img src="whatsapp.png" alt="contact us via Whatsapp"></a>
     </div>
     <header>
         <a href="index.html"><img src="tech.png" alt="Techy Savvy logo"></a>
